[package]
name = "pratt"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["derive"]

[dependencies]
do_while = "0.1.0"
pratt_derive = { path = "derive" }
span = { git = "https://github.com/Alex-Shand/span.git" }
thiserror = "2.0.17"

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.26.1"
